mb_Iac/root/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: test-app
  type: ClusterIP
